// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OrderDetails should render the OrderDetails correctly when the type prop is caterer 1`] = `
<div>
  <div
    class="admin"
  >
    <div
      class="header"
    >
      <div
        class="navbar"
      />
    </div>
    <div
      class="footer"
    >
      <p>
        © 2018. Iveren Shaguy. All images were gotten from the internet and are not mine.
      </p>
    </div>
  </div>
</div>
`;

exports[`OrderDetails should render the OrderDetails correctly when the type prop is customer 1`] = `
<div>
  <div
    class=""
  >
    <div
      class="header"
    >
      <div
        class="navbar"
      />
    </div>
    <div
      class="footer"
    >
      <p>
        © 2018. Iveren Shaguy. All images were gotten from the internet and are not mine.
      </p>
    </div>
  </div>
</div>
`;
